<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f8f8"
        android:padding="20dp"
        android:text="@string/royxatdan_otish"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linear3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:contentDescription="@string/googleplus"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:contentDescription="@string/facebook"
            android:src="@drawable/facebook" />

    </LinearLayout>

    <TextView
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/yoki_ro_yxatdan_o_tish_uchun_ntelefon_raqamingizdan_foydalaning"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear3" />

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/linear2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <EditText
            android:id="@+id/user"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@id/pswd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv" />

        <EditText
            android:id="@+id/pswd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user" />

        <EditText
            android:id="@+id/email"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pswd" />

    </LinearLayout>

    <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_country"
            android:padding="16dp"
            android:text="@string/uzbekistan"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableRightCompat="@drawable/arrow_down"
            app:layout_constraintBottom_toTopOf="@id/number_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear2" />

    <TextView
        android:id="@+id/number_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_number_left"
        android:padding="16dp"
        android:text="@string/_998"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/number_right"
        app:layout_constraintStart_toStartOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/country" />

    <TextView
        android:id="@+id/number_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_number_right"
        android:padding="16dp"
        android:text="@string/_93_4614388"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/country"
        app:layout_constraintStart_toEndOf="@id/number_left"
        app:layout_constraintTop_toTopOf="@id/number_left" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#f57b1e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>